--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.zyneonstudios.nexus</groupId>
     <artifactId>mojang-auth</artifactId>
-    <version>2024.8.1</version>
+    <version>2025.8</version>
     <packaging>jar</packaging>
 
     <description>Authenticates Minecraft access with Microsoft Xbox Live login</description>
@@ -17,8 +17,9 @@
 
     <distributionManagement>
         <repository>
-            <id>zyneonstudios-repo</id>
-            <url>https://maven.zyneonstudios.com/releases</url>
+            <id>nerofy-snapshots</id>
+            <name>Nerofy Network Maven repository</name>
+            <url>https://maven.nrfy.net/snapshots</url>
         </repository>
     </distributionManagement>
 
